--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- animate on scroll -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
-        integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
@@ -45,9 +40,11 @@
             <img class="heartbeat" src="img/load.png">
         </div>
         <header class="header" id="header">
-            <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-            <div class="row">
-                <div class="col text-center">
+            <div class="header_toggle">
+                <i class='bx bx-menu' id="header-toggle"></i>
+            </div>
+            <div class="row g-0 pe-1">
+                <div class="col pe-3 text-center">
                     <a class="">
                         <span class="buttondark">
                             <label class="switch" for="darkSwitch">
@@ -104,7 +101,7 @@
                     <h2 class="text-dark">Guest</h2>
                 </li>
                 <li>
-                    <p class="text-dark">You Are Not Login Yet, Please Log-In</p>
+                    <p class="text-dark">You are not logged in!, Please Login</p>
                 </li>
                 <li>
                     <button class="btn btn-primary">Login</button>
@@ -168,9 +165,7 @@
             <section id="about" class="about">
                 <div class="container pb-3">
                     <div class="container pb-5 px-5 pt-5">
-                        <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
-                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                            data-aos-anchor-placement="top-center" class="row">
+                        <div class="row cont-1">
                             <div class="col-md text-md-start">
                                 <img class="logoae pt-3" src="img/logoae.png">
                             </div>
@@ -206,10 +201,8 @@
                         </div>
                     </div>
 
-                    <div class="container px-5">
-                        <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
-                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                            data-aos-anchor-placement="top-center" class="row">
+                    <div class="container cont-2 px-5">
+                        <div class="row">
                             <div class="col-md-7">
                                 <h2 class="text-dark quote text-md-start pt-5">Apa itu <span class="judul">Himpunan
                                         Otomasi Manufaktur
@@ -233,9 +226,7 @@
                     </div>
 
                     <div class="container pb-5">
-                        <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
-                            data-aos-easing="ease-out" data-aos-mirror="true" data-aos-once="false"
-                            data-aos-anchor-placement="top-center" class="row">
+                        <div class="row">
                             <div class="col-6 pt-5 text-center">
                                 <i class='icon2 bx bxs-contact'></i>
                                 <h2 class="value" count="218"></h2>
@@ -265,16 +256,12 @@
                 <div class="parallax">
                     <div class="container pt-4 pb-5 px-5">
                         <div class="row">
-                            <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
-                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                                data-aos-anchor-placement="top-center" class="col pt-4">
+                            <div class="col pt-4">
                                 <div class="row no-gutters slider-text text-md-start">
                                     <h1 class="quote">14 <span>November</span> <span>19</span>95</h1>
                                 </div>
                             </div>
-                            <div data-aos="fade-up" data-aos-offset="-200" data-aos-duration="1000"
-                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                                data-aos-anchor-placement="top-center" class="col-md-6">
+                            <div class="col-md-6">
                                 <h2 class="text-white quote text-md-end pt-5">Sejarah <span class="judul">HIMAMO</span>
                                 </h2>
                                 <p class="text-white pt-2 text-md-end">
@@ -289,9 +276,7 @@
             </section>
             <section id="division">
                 <div class="container pt-5 pb-5 px-5">
-                    <div data-aos="fade-up" data-aos-offset="-100" data-aos-duration="1000"
-                        data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                        data-aos-anchor-placement="top-center" class="row">
+                    <div class="row">
                         <div class="col pt-5 text-center">
                             <h2 class="text-dark quote text-md-start">Divisi <span class="judul">HIMAMO</span>
                             </h2>
@@ -344,8 +329,7 @@
             </section>
             <section id="leader">
                 <div class="container pt-4 pb-5 px-5">
-                    <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000" data-aos-easing="ease-in-out"
-                        data-aos-mirror="true" data-aos-once="false" data-aos-anchor-placement="top-center" class="row">
+                    <div class="row">
                         <div class="col-md-8 text-md-start">
                             <div class="featured-carousel owl-carousel">
                                 <div class="item">
@@ -495,16 +479,12 @@
             <section id="prestation" class="about">
                 <div class="parallax2">
                     <div class="container pt-5 pb-5 px-5">
-                        <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
-                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                            data-aos-anchor-placement="top-center" class="row justify-content-center mb-4">
+                        <div class="row justify-content-center mb-4">
                             <div class="col-md-7 text-center">
                                 <h1 class="mb-3 text-white quote">Apa Kata <span class="judul">Mereka?</span></h1>
                             </div>
                         </div>
-                        <div data-aos="fade-up" data-aos-offset="0" data-aos-duration="1000"
-                            data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                            data-aos-anchor-placement="top-center" class="row">
+                        <div class="row">
                             <div class="col-md-12">
                                 <div class="carousel-testimony owl-theme owl-carousel">
                                     <div class="item">
@@ -615,20 +595,15 @@
             </section>
             <section id="video">
                 <div class="container pt-5 pb-5 px-5">
-                    <div data-aos="fade-up" data-aos-offset="100" data-aos-duration="1000" data-aos-easing="ease-in-out"
-                        data-aos-mirror="true" data-aos-once="false" data-aos-anchor-placement="top-center"
-                        class="row justify-content-center mb-4">
+                    <div class="row justify-content-center mb-4">
                         <div class="col-md-7 text-center">
                             <h1 class="mb-3 text-dark quote">Our <span class="judul">Moments</span></h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="text-center embed-responsive">
-                            <iframe data-aos="fade-up" data-aos-offset="100" data-aos-duration="1000"
-                                data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                                data-aos-anchor-placement="top-center" class="pideo"
-                                src="https://www.youtube.com/embed/3MlI-7cVGos" title="YouTube video player"
-                                frameborder="0"
+                            <iframe class="pideo" src="https://www.youtube.com/embed/RZgV_O8PNEU"
+                                title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
@@ -757,6 +732,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
             integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!--gsap-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
         <!-- js gue -->
         <script type='text/javascript' src='js/main.js'></script>
         <script src="js/dark-mode-switch.min.js"></script>
@@ -765,14 +743,6 @@
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-        </script>
-        <!-- animateonscroll -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
-            integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
-            crossorigin="anonymous" referrerpolicy="no-referrer">
-        </script>
-        <script>
-            AOS.init();
         </script>
 
     </body>
