gsap removed in mobile version
removed gsap on mobile

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
 <body>
 
     <body onload="load()" id="body-pd">
+        <!-- loading background-->
         <div class="bg-light" id="loading">
             <img class="heartbeat" src="img/load.png">
         </div>
+        
         <header class="header" id="header">
             <div class="header_toggle">
                 <i class='bx bx-menu' id="header-toggle"></i>
             </div>
-            <div class="row g-0 pe-1">
+            <div class="row pe-2">
                 <div class="col pe-3 text-center">
                     <a class="">
                         <span class="buttondark">
@@ -89,8 +91,11 @@
                                 class='bx bxs-phone nav_icon'></i>Contact</span> </a>
 
                     </div>
-                </div> <a href="#" class="nav_link"> <i class='bx bx-log-in nav_icon'></i> <span
-                        class="nav_name">Login</span> </a>
+                </div> 
+                <a href="#" class="nav_link"> 
+                    <i class='bx bx-log-in nav_icon'></i> 
+                    <span class="nav_name">Login</span> 
+                </a>
             </nav>
         </div>
 
@@ -123,7 +128,7 @@
 
             <section id="home">
                 <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
+                    <div class="carousel-inner gs_reveal">
                         <div class="carousel-item drk active">
                             <img src="img/1.jpg" class="d-block gbr img-fluid">
                             <div class="carousel-caption">
@@ -165,11 +170,11 @@
             <section id="about" class="about">
                 <div class="container pb-3">
                     <div class="container pb-5 px-5 pt-5">
-                        <div class="row cont-1">
+                        <div class="row">
                             <div class="col-md text-md-start">
-                                <img class="logoae pt-3" src="img/logoae.png">
+                                <img class="logoae gs_reveal gs_reveal_fromLeft pt-3" src="img/logoae.png">
                             </div>
-                            <div class="col-md-7">
+                            <div class="col-md-7 gs_reveal gs_reveal_fromRight">
                                 <h2 class="text-dark quote text-md-end pt-3">Apa itu <span class="judul">Jurusan
                                         Teknik Otomasi
                                         Manufaktur dan Mekatronika?</span></h2>
@@ -203,7 +208,7 @@
 
                     <div class="container cont-2 px-5">
                         <div class="row">
-                            <div class="col-md-7">
+                            <div class="col-md-7 gs_reveal gs_reveal_fromRight">
                                 <h2 class="text-dark quote text-md-start pt-5">Apa itu <span class="judul">Himpunan
                                         Otomasi Manufaktur
                                         dan Mekatronika?</span></h2>
@@ -220,12 +225,12 @@
 
                             </div>
                             <div class="col-md pb-5 text-md-end">
-                                <img class="logoae pt-5" src="img/segitiga.png">
+                                <img class="logoae gs_reveal gs_reveal_fromLeft pt-5" src="img/segitiga.png">
                             </div>
                         </div>
                     </div>
 
-                    <div class="container pb-5">
+                    <div class="container gs_reveal pb-5">
                         <div class="row">
                             <div class="col-6 pt-5 text-center">
                                 <i class='icon2 bx bxs-contact'></i>
@@ -256,12 +261,12 @@
                 <div class="parallax">
                     <div class="container pt-4 pb-5 px-5">
                         <div class="row">
-                            <div class="col pt-4">
+                            <div class="col gs_reveal gs_reveal_fromLeft pt-4">
                                 <div class="row no-gutters slider-text text-md-start">
                                     <h1 class="quote">14 <span>November</span> <span>19</span>95</h1>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6 gs_reveal gs_reveal_fromRight">
                                 <h2 class="text-white quote text-md-end pt-5">Sejarah <span class="judul">HIMAMO</span>
                                 </h2>
                                 <p class="text-white pt-2 text-md-end">
@@ -275,7 +280,7 @@
                     </div>
             </section>
             <section id="division">
-                <div class="container pt-5 pb-5 px-5">
+                <div class="container gs_reveal gs_reveal_fromRight pt-5 pb-5 px-5">
                     <div class="row">
                         <div class="col pt-5 text-center">
                             <h2 class="text-dark quote text-md-start">Divisi <span class="judul">HIMAMO</span>
@@ -328,7 +333,7 @@
                 </div>
             </section>
             <section id="leader">
-                <div class="container pt-4 pb-5 px-5">
+                <div class="container gs_reveal gs_reveal_fromLeft pt-4 pb-5 px-5">
                     <div class="row">
                         <div class="col-md-8 text-md-start">
                             <div class="featured-carousel owl-carousel">
@@ -486,7 +491,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="carousel-testimony owl-theme owl-carousel">
+                                <div class="carousel-testimony gs_reveal wl-theme owl-carousel">
                                     <div class="item">
                                         <div class="icon d-flex align-items-center justify-content-center">
                                             <i class='bx bxs-quote-right'></i>
@@ -602,7 +607,7 @@
                     </div>
                     <div class="row">
                         <div class="text-center embed-responsive">
-                            <iframe class="pideo" src="https://www.youtube.com/embed/RZgV_O8PNEU"
+                            <iframe class="gs_reveal pideo" src="https://www.youtube.com/embed/RZgV_O8PNEU"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
